--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     container_name: rs0
     command: mongod --replSet ${RS:-rs0} --port ${PORT:-27017}
     restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 512M
     volumes:
       - ./data/db:/data/db
       - ./rs-init.sh:/scripts/rs-init.sh
